--- a/2015-05-03-lindy_hop.md
+++ b/2015-05-03-lindy_hop.md
@@ -1,3 +1,48 @@
-## A New Post
+# Lindy Hop
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+## Lindy Hop, Dax Hock et Sarah Breck, 2011
+
+Le Lindy Hop (ou Jitterbug) est une **danse de rue** qui s'est développée dans la communauté noire-américaine de Harlem (New York) vers la fin des années 1920, en parallèle avec le jazz et plus particulièrement le swing.
+
+Le Lindy Hop est un *mélange* de plusieurs danses provenant des quatre coins des États-Unis à partir des années 1900, principalement le charleston, le breakaway et le collegiate1. Le Lindy Hop utilise les mouvements improvisés des danses africaines [Lesquelles ?] avec la discipline de la structure en 6 et 8 temps des danses européennes. Le Lindy Hop est un mélange de danse en couple et séparée, venant de ses origines métissées.
+
+## Origines
+
+Entre 1910 et 1950, Harlem était un lieu où les gens de tout horizon, toutes couleurs et toutes classes se réunissaient. Le « Cotton Club » présentait des artistes noirs et accueillait la riche clientèle blanche et glamour pendant que [la salle de bal « Savoy »](http://fr.wikipedia.org/wiki/Lindy_Hop), ouverte en 1926, accueillait la clientèle plus modeste, à forte proportion noire. Le Savoy était malgré tout l'une des rares salles de bal intégrée, c'est-à-dire ouverte aux blancs et aux noirs. Le Savoy était le haut lieu de la danse à Harlem et accueillait l'élite des danseurs dont la troupe des Whitey's Lindy Hoppers. La musique Swing et le Lindy Hop évoluèrent parallèlement dans ces salles de bal et principalement au Savoy.
+
+## Histoire
+
+Dans les années 1910 et 1920, dans tous les vaudevilles, les professionnels montraient leurs talents au travers des claquettes et autres danses de cette période. Dans les années 1920 et 1930, les salles de bal américaines sponsorisèrent des concours de danse, au cours desquels les danseurs improvisaient et inventaient de nouveaux pas. C'est dans ce milieu que naquit le Lindy Hop.
+
+Légende communément acceptée :[Par qui ?] 21 mai 1927, Charles Lindbergh vient de traverser l'Atlantique, c'est le grand saut, "le Big Hop". C'est un événement mondial qui se fête partout dans le monde, notamment au Savoy. C'est à ce moment qu'un journaliste vient interviewer le meilleur danseur de l'époque (Georges "Shorty" Snowden), pour savoir ce qu'il dansait. Cependant, cette danse n'avait pas de nom particulier, et sans doute à court d'inspiration et/ou en hommage à "Lindy" (Charles Lindbergh), ce dernier répondit qu'il dansait le "Lindy Hop".
+
+Le Lindy Hop fut popularisé à travers tous les États-Unis par une troupe de danse professionnelle, les Whitey's Lindy Hoppers, dont les membres les plus connus sont Frankie Manning, Al Minns et Leon James. On peut voir ces danseurs dans des films comme Hellzapoppin, Un jour aux courses.
+
+Le Lindy Hop apparaît pour la première fois à Paris en juin-juillet 1937 dans "the Cotton Club Revue" avec l'orchestre de Teddy Hill2.
+Le Lindy Hop de nos jours
+
+Le Lindy Hop continue à évoluer aujourd'hui. Après une phase sombre entre 1950 et 1980, il est réapparu dans les années 1980 grâce à l'énergie de plusieurs groupes : les Harlem Hot Shots3 (Suède), la New York Swing Society (États-Unis) et les Jiving Lindy Hoppers (Angleterre). Aujourd'hui on danse à nouveau le Lindy Hop dans tous les États-Unis et dans le monde entier.
+
+En France les principales scènes de Lindy Hop sont Paris, Toulouse, Montpellier, Grenoble et Aix-en-Provence[réf. nécessaire]. De nombreux festivals y sont organisés tout au long de l'année.
+La danse
+
+Le Lindy est une danse riche et diversifiée. Le Lindy se danse sur des musiques Swing, avec un tempo allant de 20 à 70 mesures par minute (MPM). Le Lindy Hop est l'ancêtre du rock qui s'en rapproche par le style musical et le pas de base. Cependant, là où le rythme du rock est plus carré, le lindy se rapproche du boogie-woogie avec un style « swingué », arrondi.
+
+Le but d'une danse de bal ou société est de sortir, écouter de la musique, rencontrer des gens, se dépenser et s'amuser. Les motivations sont diverses et propres à chacun. La plupart du temps les cavaliers demandent aux dames de leur accorder une ou plusieurs danses. De temps en temps, ce sera l'inverse suivant les lieux et les pays. Ils peuvent parler autant qu'ils le souhaitent. Ainsi, Frankie Manning affirme qu'il demande toujours à sa cavalière quels pas elle connaît.
+
+Dans ces soirées ou bals, on rencontre des danseurs de niveaux très différents, donc la coopération avec son partenaire est aussi importante que la technique. La danse avec un nouveau partenaire consiste d'abord à s'ajuster, avoir le même rythme (le même bounce). Que sait faire l'autre ? Qu'aime-t-il (elle) faire ? Danser avec un partenaire régulier permet de jouer mais aussi de connaître des nouvelles passes. Une danse entre un débutant et un danseur plus expérimenté permet de communiquer une passion, de s'appliquer sur des pas de base, d’écouter l'autre, de comprendre le rythme et les mouvements. Danser avec des danseurs avertis permet d'essayer des pas difficiles ou inhabituels, des danses sur des tempos plus rapides, suivre et guider sera plus facile pour chacun ce qui laisse plus de place à l'improvisation.
+
+Aujourd'hui, certains danseurs s'habillent avec des costumes d'époque des années 1920, 1930 ou 1940. Certains danseurs portent leurs plus beaux habits. D'autres considèrent que danser le Lindy Hop n'est pas un acte nostalgique et peuvent alors porter des jeans et des t-shirts. Certains garçons portent des pantalons larges, ce n'est pas forcément en référence au passé, mais peut-être également pour des raisons pratiques : le pantalon serré pourrait être inconfortable. On pourra également remarquer qu'aujourd'hui, le hip-hop s'intègre très bien au lindy, ce qui redonne un second souffle de jeunesse à cette danse[réf. nécessaire].
+
+Le Lindy Hop se danse habituellement dans des bals, soirées, bars, clubs, studio de danse ou fêtes privées. La plupart des clubs et studios proposent des cours pour débutants et des cours de perfectionnement.
+Les scènes typiques en Lindy Hop
+La Jam
+
+La Jam est le nom donné à l'arène formé par un attroupement de danseurs, laissant vide un espace circulaire. Alors, à tour de rôle, des couples de danseurs se lancent pour faire le show. la jam se forme en général sur des musiques très rapides (où le tempo « dope » les danseurs). La jam est un moment de convivialité qui se retrouve aussi dans d’autres danses (notamment en Hip-hop). La jam se forme également à l’occasion de l’anniversaire d’un danseur ou d’une danseuse, qui, se voit invité pour une danse par une succession de partenaires. Enfin la jam est aussi un moyen pour les danseurs de remercier un orchestre lorsque celle-ci se forme près de la scène. Il y a alors un véritable échange entre musiciens et danseurs.
+Katja Hrastar et Peter Loggins dans une Jam Lindy Shock 2011, Budapest, Hongrie
+La danse des voleurs
+
+Le principe de la danse des voleurs est très simple : « si t’es seul, va prendre le/la partenaire d’un autre danseur ! ». Le danseur dépossédé de sa partenaire va alors se rapprocher d’un autre couple et y subtiliser avec plus ou moins de finesse la cavalière (inversement pour les danseuses).
+Le Snow-ball
+
+La ‘’’Boule de Neige’’’ se fait sur une musique où 2 danseurs commencent à danser, et lorsque le speaker annonce « Snow-ball », le couple se sépare et va inviter 2 autres danseurs. Au « Snow-ball » suivant, il y aura 8 danseurs sur la piste et ainsi de suite, tout le monde se met à danser. Le speaker peut aussi annoncer des « Freeze » : tout le monde se fige alors en attendant que le speaker demande de repartir.
