--- a/2015-05-03-lindy_hop.md
+++ b/2015-05-03-lindy_hop.md
@@ -1,6 +1,8 @@
 ---
-title:
+title: null
+published: true
 ---
+
 # Lindy Hop
 
 ## Lindy Hop, Dax Hock et Sarah Breck, 2011
@@ -8,6 +10,9 @@ title:
 Le Lindy Hop (ou Jitterbug) est une **danse de rue** qui s'est développée dans la communauté noire-américaine de Harlem (New York) vers la fin des années 1920, en parallèle avec le jazz et plus particulièrement le swing.
 
 Le Lindy Hop est un *mélange* de plusieurs danses provenant des quatre coins des États-Unis à partir des années 1900, principalement le charleston, le breakaway et le collegiate1. Le Lindy Hop utilise les mouvements improvisés des danses africaines [Lesquelles ?] avec la discipline de la structure en 6 et 8 temps des danses européennes. Le Lindy Hop est un mélange de danse en couple et séparée, venant de ses origines métissées.
+
+![Capture d’écran 2015-05-03 à 22.18.39.png](/media/Capture d’écran 2015-05-03 à 22.18.39.png)
+
 
 ## Origines
 
