--- a/2015-05-03-lindy_hop.md
+++ b/2015-05-03-lindy_hop.md
@@ -11,7 +11,7 @@ Le Lindy Hop (ou Jitterbug) est une **danse de rue** qui s'est développée dans
 
 Le Lindy Hop est un *mélange* de plusieurs danses provenant des quatre coins des États-Unis à partir des années 1900, principalement le charleston, le breakaway et le collegiate1. Le Lindy Hop utilise les mouvements improvisés des danses africaines [Lesquelles ?] avec la discipline de la structure en 6 et 8 temps des danses européennes. Le Lindy Hop est un mélange de danse en couple et séparée, venant de ses origines métissées.
 
-![swing.png](/media/swing.png)
+![swing.png](https://raw.githubusercontent.com/izaswing/swing/master/media/swing.png)
 
 ## Origines
 
